...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health03"
    android:id="@+id/controllActivity"
    tools:context=".controll">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/buttonShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="Add Record"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
