<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/health01"
    android:gravity="center"
    android:id="@+id/activityRegister"
    tools:context=".Register">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textSize="40dp"
        android:textColor="#27378C"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:id="@+id/full_name"
        android:maxLines="1"
        android:hint="Full Name"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:textColorHint="#F30E0E0E"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:id="@+id/phone"
        android:textColorHint="#F30E0E0E"
        android:maxLines="1"
        android:hint="Phone"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:maxLines="1"
        android:hint="Email"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:textColorHint="#F30E0E0E"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:maxLines="1"
        android:hint="Password"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:textColorHint="#F30E0E0E"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:id="@+id/confirmPassword"
        android:maxLines="1"
        android:hint="ConformPassword"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:textColorHint="#F30E0E0E"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_here_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="Register"
        android:background="#119CDC"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/belowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an Account ? "
            android:textSize="16dp"
            android:textColor="#0C0206"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:id="@+id/login_now_button"
            android:text="Sign in"
            android:textStyle="bold"
            android:textColor="#0C0206"
            />

    </LinearLayout>

</LinearLayout>
